# pure_python

./: .gitignore  README.md  pyproject.toml
src/pure/: __init__.py  _version.py
src/pure.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
